--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
         <ul id="blockedWebsitesList"></ul>
       </div>
       <button class="buttons" id="clearBlockedWebsitesButton">Clear</button>
-      <button class= "buttons" id="toggleBlockingButton">Enable Blocking</button>
+      <button class= "disable_button" id="toggleBlockingButton">Enable Blocking</button>
     </div>
     
   </div>
